remove some unused API endpoints
