# service/api/ban-actions.go
@@ -101,30 +101,3 @@ func (rt *_router) unbanUser(w http.ResponseWriter, r *http.Request, ps httprout
 	w.WriteHeader(http.StatusNoContent)
 
 }
-
-// Obtain the list of banned users
-func (rt *_router) getBanList(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-	var bannings []string
-
-	uid, err := strconv.ParseUint(ps.ByName("uid"), 10, 64)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
-		return
-	}
-
-	err = CheckAuthentication(r.Header.Get("Authorization"), uid)
-	if errors.Is(err, database.ErrNotAuthorized) {
-		http.Error(w, err.Error(), http.StatusUnauthorized)
-		return
-	}
-
-	bannings, err = rt.db.GetBannings(uid)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	w.Header().Set("content-type", "application/json")
-	w.WriteHeader(http.StatusOK)
-	_ = json.NewEncoder(w).Encode(bannings)
-}
