# service/api/follow-actions.go
@@ -89,30 +89,3 @@ func (rt *_router) unfollowUser(w http.ResponseWriter, r *http.Request, ps httpr
 	w.WriteHeader(http.StatusNoContent)
 
 }
-
-// Obtain the list of followed users
-func (rt *_router) getFollowList(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-	var followings []string
-
-	uid, err := strconv.ParseUint(ps.ByName("uid"), 10, 64)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
-		return
-	}
-
-	err = CheckAuthentication(r.Header.Get("Authorization"), uid)
-	if errors.Is(err, database.ErrNotAuthorized) {
-		http.Error(w, err.Error(), http.StatusUnauthorized)
-		return
-	}
-
-	followings, err = rt.db.GetFollowings(uid)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	w.Header().Set("content-type", "application/json")
-	w.WriteHeader(http.StatusOK)
-	_ = json.NewEncoder(w).Encode(followings)
-}
